# dotfiles

./: .gitignore  .gitmodules  .gnuplot  LICENSE  README.md  glow.yml  pyproject.toml  starship.toml  sw-nvim-cmp-blink  swpunc
.claude/: CLAUDE.md  settings.json
.claude/commands/: gen-conventional-commits-message.md
.claude/hooks/: block-broad-fs-scan.py  block-rg-replace-confusion.py  block-suppress.py  deny-direct-python.sh  deny-gh-body-hardwrap.sh  deny-gh-direct-body.sh  detect-leaked-toolcall.py  redirect-git-worktree-add.py  suppress-policy.toml
.claude/rules/: correction-handling.md  reader-transport.md
aerospace/: aerospace.toml
atuin/: config.toml
direnv/: direnvrc
fancy-cat/: config.json
find-orphan/: find-orphan
fish/: config.fish  fish_variables
gh-dash/: config.yml
ghostty/: config
git/: .gitconfig
hammerspoon/: init.lua
home-manager/: .gitignore  flake.nix  home.nix  machine-specific.example.nix
hpc/: config.toml
jtc/: config.toml
lazygit/: branch-add-worktree.sh  branch-create-worktree.sh  branch-reset-in-worktree.sh  config.yml  pr-checkout-as-worktree-tracked.sh  pr-checkout-as-worktree.sh  pr-checkout-with-confirm.sh  pr-merged-branches-status.sh  remote-checkout-as-worktree.sh  set-upstream-url.sh
lazygit-anywhere/: lazygit-anywhere  lazygit-lru
matplotlib/: matplotlibrc
modulefiles/: OpenBLAS  lapack  libomp  llvm  llvm20  sphinx
nushell/: config.nu
nvim/: CLAUDE.md  init.lua  lazy-lock.json  lazyvim.json
nvim-nightly/: flake.nix
typos/: .typos.toml
vim/: .vimrc
wezterm/: wezterm.lua
(+63 files in other folders)
