[project]
name = "defaultpy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "networkx>=3.3",
    "numpy>=2.1.0",
    "scipy>=1.14.1",
    "sympy>=1.13.2",
    "seaborn>=0.13.2",
    "cpplint>=1.6.1",
]
